--- a/package.json
+++ b/package.json
@@ -3,11 +3,29 @@
   "private": true,
   "version": "1.0.0",
   "description": "A client-side helper that extracts numeric AO3 tag IDs from feed URLs and generates filter_ids search queries.",
+  "author": "DreadAxle",
+  "homepage": "https://github.com/DreadAxle/AO3-Filter#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DreadAxle/AO3-Filter.git"
+  },
+  "bugs": {
+    "url": "https://github.com/DreadAxle/AO3-Filter/issues"
+  },
+  "keywords": [
+    "ao3",
+    "archiveofourown",
+    "filter_ids",
+    "react",
+    "vite",
+    "tailwindcss"
+  ],
   "license": "MIT",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:github": "tsc && vite build --mode github",
     "preview": "vite preview"
   },
   "dependencies": {
